--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "react-timer-hook": "^3.0.7",
     "redux": "^5.0.1",
     "sweetalert2": "^11.10.6",
     "sweetalert2-react-content": "^5.0.7",
