--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@redux-devtools/extension": "^3.3.0",
     "bootstrap": "^5.3.3",
+    "date-fns": "^3.6.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
+    "react-number-format": "^5.3.4",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-timer-hook": "^3.0.7",
